--- a/app/views/searchcases/layoutstaffcaslistonly_new_2.html
+++ b/app/views/searchcases/layoutstaffcaslistonly_new_2.html
@@ -95,28 +95,6 @@
                             <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 650px;">
                                 <ul class="hmcts-primary-navigation__list">
 
-                                    {% if data.selectedtab == "mywork"  %}
-                                    <li class="hmcts-primary-navigation__item" style="border-bottom: 5px solid white;">
-                                        <a class="hmcts-primary-navigation__link" style="text-decoration: none; padding-bottom: 8px;" href="/searchcases/transition/available-tasks-sscs-testing?selectedtab=mywork&">
-                                            My work
-                                        </a>
-                                    </li>
-                                    {% else %}
-                                    <li class="hmcts-primary-navigation__item">
-                                        <a class="hmcts-primary-navigation__link" href="/searchcases/transition/available-tasks-sscs-testing?selectedtab=mywork&">
-                                            My work
-                                        </a>
-                                    </li>
-                                    {% endif %}
-
-
-                                    <li class="hmcts-primary-navigation__item">
-                                        <a class="hmcts-primary-navigation__link" href="#">
-                                            All work
-                                        </a>
-                                    </li>
-
-
                                     {% if data.selectedtab == "caselist"  %}
                                         <li class="hmcts-primary-navigation__item" style="border-bottom: 5px solid white;">
                                             <a class="hmcts-primary-navigation__link" style="text-decoration: none; padding-bottom: 8px;" href="/searchcases/transition/caselist?selectedtab=caselist&">
@@ -133,27 +111,13 @@
 
                                     {% if data.selectedtab == "search"  %}
                                         <li class="hmcts-primary-navigation__item" style="border-bottom: 5px solid white;">
-                                            <a class="hmcts-primary-navigation__link" style="text-decoration: none; padding-bottom: 8px;" href="/searchcases/transition/search?selectedtab=search&">
-                                                Search cases
-                                            </a>
-                                        </li>
-                                    {% else %}
-                                        <li class="hmcts-primary-navigation__item">
-                                            <a class="hmcts-primary-navigation__link" href="/searchcases/transition/search?selectedtab=search&">
-                                                Search cases
-                                            </a>
-                                        </li>
-                                    {% endif %}
-
-                                    {% if data.selectedtab == "search"  %}
-                                        <li class="hmcts-primary-navigation__item" style="border-bottom: 5px solid white;">
-                                            <a class="hmcts-primary-navigation__link" style="text-decoration: none; padding-bottom: 8px;" href="findcase">
+                                            <a class="hmcts-primary-navigation__link" style="text-decoration: none; padding-bottom: 8px;" href="/searchcases/transition/findcase">
                                                 Find case
                                             </a>
                                         </li>
                                     {% else %}
                                         <li class="hmcts-primary-navigation__item">
-                                            <a class="hmcts-primary-navigation__link" href="findcase">
+                                            <a class="hmcts-primary-navigation__link" href="/searchcases/transition/findcase">
                                                 Find case
                                             </a>
                                         </li>
@@ -193,7 +157,7 @@
                        >
 
                            <div style="display: flex;flex-direction: row; ">
-                               <p style="color: white; margin-top:8px; margin-bottom: 0px; ">16-digit case referencesss:  &nbsp;</p>
+                               <p style="color: white; margin-top:8px; margin-bottom: 0px; ">16-digit case reference:  &nbsp;</p>
                                <input class="govuk-input" id="hmctsrefheader" name="hmctsrefheader" type="text" spellcheck="false" style="width:219px;">
                                <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
                                    Find
