--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -26,7 +26,7 @@
             <p><a  target="_blank"    href="/searchcases/pages/loading-screen?usertype=staff&results=many&">2 pages of results</a></p>
             <p><a  target="_blank"    href="/searchcases/pages/loading-screen-time-out.html">Timeout - After 6 seconds</a></p>
             <p><a  target="_blank"    href="/searchcases/pages/noresults?usertype=staff&.html">Restricted case</a></p>
-            <p><a  target="_blank"    href="/searchcases/pages/search_errors.html">Search errors</a></p>
+            <p><a     href="/searchcases/pages/search_errors.html">Search errors</a></p>
 
         </div>
 
