--- a/app/views/searchcases/layoutstaff_error.html
+++ b/app/views/searchcases/layoutstaff_error.html
@@ -169,6 +169,8 @@
         <div style=" max-width:1860px; margin: 0 auto;">
             <div style=" max-width:1860px;  min-width:960px;  margin: 20px 30px 0px 30px;  ">
 
+                <a href="../../searchcases" class="govuk-back-link">Back</a>
+
                     {% block beforeContent %}{% endblock %}
                     <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %} style="padding-top: 25px;">
                         {% block content %}{% endblock %}
