--- a/app/views/searchcases/layoutstaff_error.html
+++ b/app/views/searchcases/layoutstaff_error.html
@@ -92,26 +92,72 @@
                         </div>
 
                         <div>
-                            <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 400px;">
+                            <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 650px;">
                                 <ul class="hmcts-primary-navigation__list">
+
+
                                     <li class="hmcts-primary-navigation__item">
-                                        <a class="hmcts-primary-navigation__link" href="/searchcases/pages/available-tasks-sscs-testing">
+                                        <a class="hmcts-primary-navigation__link" href="#">
                                             My work
                                         </a>
                                     </li>
+                   
+
+
                                     <li class="hmcts-primary-navigation__item">
                                         <a class="hmcts-primary-navigation__link" href="#">
                                             All work
                                         </a>
                                     </li>
+
+
+
                                     <li class="hmcts-primary-navigation__item">
-                                        <a class="hmcts-primary-navigation__link" href="/searchcases/pages/startsearch">
-                                            Search cases
-                                        </a>
+                                            <a class="hmcts-primary-navigation__link" href="#">
+                                                Case list
+                                            </a>
                                     </li>
-                                </ul>
-                            </nav>
-                        </div>
+
+                                    <li class="hmcts-primary-navigation__item">
+                                            <a class="hmcts-primary-navigation__link" href="#">
+                                                Create case
+                                            </a>
+                                    </li>
+
+                                    <li class="hmcts-primary-navigation__item" style="border-bottom: 5px solid white;">
+                                            <a class="hmcts-primary-navigation__link" style="text-decoration: none; padding-bottom: 8px;" href="#">
+                                                Find case
+                                            </a>
+                                    </li>
+
+        
+                                    <li class="hmcts-primary-navigation__item">
+                                            <a class="hmcts-primary-navigation__link" href="findcase">
+                                                Search cases
+                                            </a>
+                                    </li>
+                  
+
+                                    <!--
+                                        <li class="hmcts-primary-navigation__item">
+                                            <a class="hmcts-primary-navigation__link" href="#">
+                                                Create case
+                                            </a>
+                                        </li>
+                                     -->
+
+
+                                    <!--
+                                       <li class="hmcts-primary-navigation__item">
+                                           <a class="hmcts-primary-navigation__link" href="#">
+                                               Find case
+                                           </a>
+                                       </li>
+                                    -->
+                               </ul>
+                           </nav>
+                       </div>
+
 
 
                         <div style="display: flex; flex-grow: 1;">
