--- a/app/views/searchcases/pages/error_scenario_2.html
+++ b/app/views/searchcases/pages/error_scenario_2.html
@@ -21,7 +21,7 @@ Case details
       <div class="govuk-error-summary__body">
         <ul class="govuk-list govuk-error-summary__list">
           <li>
-            The entered 16-digit case reference do not match with our records. Enter a valid 16-digit case reference
+            This 16-digit case reference could not be found. Try searching again or go back.
           </li>
         </ul>
       </div>
@@ -90,7 +90,7 @@ Case details
 
                     <span id="passport-issued-error" class="govuk-error-message">
                       <span class="govuk-visually-hidden">Error:</span> 
-                      The entered 16-digit case reference do not match with our records. 
+                      This 16-digit case reference could not be found. 
                     </span>
                    
                     <input class="govuk-input govuk-input--width-10 govuk-input--error" id="hmctsref" name="hmctsref" type="text" spellcheck="false"  value="111222233334444">
