--- a/app/views/searchcases/layoutstafftransition_error_scenario_2.html
+++ b/app/views/searchcases/layoutstafftransition_error_scenario_2.html
@@ -97,7 +97,7 @@
 
 
                                     <li class="hmcts-primary-navigation__item">
-                                        <a class="hmcts-primary-navigation__link" href="/searchcases/transition/available-tasks-sscs-testing?selectedtab=mywork&">
+                                        <a class="hmcts-primary-navigation__link" href="#">
                                             My work
                                         </a>
                                     </li>
@@ -112,24 +112,30 @@
 
 
 
-                                        <li class="hmcts-primary-navigation__item">
-                                            <a class="hmcts-primary-navigation__link" href="/searchcases/transition/caselist?selectedtab=caselist&">
+                                    <li class="hmcts-primary-navigation__item">
+                                            <a class="hmcts-primary-navigation__link" href="#">
                                                 Case list
                                             </a>
-                                        </li>
+                                    </li>
 
-                                        <li class="hmcts-primary-navigation__item" style="border-bottom: 5px solid white;">
-                                            <a class="hmcts-primary-navigation__link" style="text-decoration: none; padding-bottom: 8px;" href="/searchcases/transition/search?selectedtab=search&">
-                                                Search cases
+                                    <li class="hmcts-primary-navigation__item">
+                                            <a class="hmcts-primary-navigation__link" href="#">
+                                                Create case
                                             </a>
-                                        </li>
+                                    </li>
 
-        
-                                        <li class="hmcts-primary-navigation__item">
-                                            <a class="hmcts-primary-navigation__link" href="findcase">
+                                    <li class="hmcts-primary-navigation__item" style="border-bottom: 5px solid white;">
+                                            <a class="hmcts-primary-navigation__link" style="text-decoration: none; padding-bottom: 8px;" href="#">
                                                 Find case
                                             </a>
-                                        </li>
+                                    </li>
+
+        
+                                    <li class="hmcts-primary-navigation__item">
+                                            <a class="hmcts-primary-navigation__link" href="findcase">
+                                                Search cases
+                                            </a>
+                                    </li>
 
                                     <!--
                                         <li class="hmcts-primary-navigation__item">
